Fix tasks overflow

--- a/client/src/components/AppPages/Dashboard/TasksPanel/TasksPanel.module.css
+++ b/client/src/components/AppPages/Dashboard/TasksPanel/TasksPanel.module.css
@@ -5,6 +5,7 @@
     width: 95%;
     height: 37vh;
     margin-bottom: 3%;
+    overflow-y: scroll;
 }
 
 .tasksList
